--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,7 @@
 		<module>geowave-types</module>
 		<module>geowave-analytics</module>
 		<module>geowave-deploy</module>
+		<module>geowave-jace</module>
 		<module>geowave-test</module>
 	</modules>
 
