--- a/geowave-vector/pom.xml
+++ b/geowave-vector/pom.xml
@@ -68,5 +68,17 @@
 			<version>${geotools.version}</version>
 			<scope>${geotools.scope}</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.accumulo</groupId>
+			<artifactId>accumulo-minicluster</artifactId>
+			<version>${accumulo.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
