--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,7 @@ jdk:
   - oraclejdk7
 env:
   matrix:
-    - ACCUMULO_VERSION='1.5.1'   HADOOP_VERSION='2.0.0-cdh4.7.0'     HADOOP_VERSION_MR='2.0.0-mr1-cdh4.7.0'   GEOTOOLS_VERSION='11.2'   GEOSERVER_VERSION='2.5.2'
-    - ACCUMULO_VERSION='1.6.0'   HADOOP_VERSION='2.0.0-cdh4.7.0'     HADOOP_VERSION_MR='2.0.0-mr1-cdh4.7.0'   GEOTOOLS_VERSION='11.2'   GEOSERVER_VERSION='2.5.2' 
-    - ACCUMULO_VERSION='1.5.1'   HADOOP_VERSION='2.3.0-cdh5.0.3'     HADOOP_VERSION_MR='2.3.0-cdh5.0.3'       GEOTOOLS_VERSION='11.2'   GEOSERVER_VERSION='2.5.2'
     - ACCUMULO_VERSION='1.6.0'   HADOOP_VERSION='2.3.0-cdh5.0.3'     HADOOP_VERSION_MR='2.3.0-cdh5.0.3'       GEOTOOLS_VERSION='11.2'   GEOSERVER_VERSION='2.5.2' 
-    - ACCUMULO_VERSION='1.6.0'   HADOOP_VERSION='1.2.0.23'           HADOOP_VERSION_MR='1.2.0.23'             GEOTOOLS_VERSION='11.2'   GEOSERVER_VERSION='2.5.2' 	
   global:
     #github token
     - secure: "TosKDl5mnt8UKeyWDg65i6cWENR7EorQbFPSvZ5ZfQfAaDAOeIN2OA/zxtRMELeYM82+n+GGXQOt0qPiYqyRlufYJJSUnWiwvI5gm3a8+f58atcU2R2bF9jd81bsL9jCS+JCQxAmzh8FCO6t7DJ4OdoMyMaIR7XjlSlsIJ97dd8="
@@ -28,4 +24,4 @@ addons:
     notification_email: chris@slowcar.net
     build_command_prepend: "mvn clean"
     build_command:   "mvn -DskipTests=true compile"
-    branch_pattern: master
+    branch_pattern: coverty_scan
