--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ before_install:
   - chmod +x .utility/push-javadoc-to-gh-pages.sh
 after_success:
   - .utility/push-javadoc-to-gh-pages.sh
+cache:
+  directories:
+  - $HOME/.m2
