Initial commit of REST services for GeoWave. Web service created to:\n(1) Retrieve GeoWave Namespaces\n(2) Retrieve Layers associated with GeoWave Namespaces\n\nCreated Java methods to (1) publish Data Store and (2) publish Layer.

--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,8 @@
 		<module>geowave-analytics</module>
 		<module>geowave-deploy</module>
 		<module>geowave-test</module>
+		<module>geowave-webservices</module>
+		<module>geowave-utils</module>
 	</modules>
 
 	<repositories>
