--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,17 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		
 		<plugins>
-			<plugin>
+					<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.5.8.201207111220</version>
+				<version>0.7.1.201405082137</version>
+				<configuration>
+					<includes>
+						<include>mil/nga/giat/geowave**</include>
+					</includes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -133,6 +139,47 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+					</execution>
+					<execution>
+						<id>pre-unit-test</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${sonar.jacoco.reportPath}</destFile>
+							<propertyName>jacoco.surefire.argLine</propertyName>
+						</configuration>
+					</execution>
+					<execution>
+						<id>pre-integration-test</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${sonar.jacoco.itReportPath}</destFile>
+							<propertyName>jacoco.failsafe.argLine</propertyName>
+						</configuration>
+					</execution>
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<datafile>${sonar.jacoco.reportPath}</datafile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>post-integration-test</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>${sonar.jacoco.itReportPath}</dataFile>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
