--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -133,12 +133,17 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.0</version>
+                <version>1.5.2</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.asciidoctor</groupId>
-                        <artifactId>asciidoctorj</artifactId>
-                        <version>1.5.2</version>
+                        <artifactId>asciidoctorj-epub3</artifactId>
+                        <version>1.5.0-alpha.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.6</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -153,6 +158,16 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>generate-epub</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>epub3</backend>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>generate-pdf</id>
                         <phase>generate-resources</phase>
                         <goals>
@@ -163,7 +178,6 @@
                                 <require>asciidoctor-pdf</require>
                             </requires>
                             <backend>pdf</backend>
-                            <!-- WARNING callout bullets don't yet work with CodeRay -->
                             <sourceHighlighter>coderay</sourceHighlighter>
                             <attributes>
                                 <imagesdir>./images</imagesdir>
@@ -175,7 +189,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>asciidoc-to-html</id>
+                        <id>generate-html</id>
                         <phase>generate-resources</phase>
                         <goals>
                             <goal>process-asciidoc</goal>
