--- a/pom.xml
+++ b/pom.xml
@@ -419,6 +419,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
         </plugins>
     </build>
     <modules>
